# ftuser

./: .gitignore  README.md  backtest_all_strategies.sh  docker-compose-aws.yml  docker-compose-multi.yml  kind-config.yaml  user-data.sh
docs/: AWS_COST_MANAGEMENT.md  AWS_DEPLOYMENT_GUIDE.md  BACKTESTING_GUIDE.md  BACKTEST_ANALYSIS.md  COMMAND_GUIDE.md  DRY_RUN_GUIDE.md  KUBERNETES_GUIDE.md  MONITORING_GUIDE.md  STRATEGY_ADDITION_GUIDE.md  UNIFIED_UI_GUIDE.md  setup-guide.md
guides/: BACKTESTING_GUIDE.md  BACKTEST_ANALYSIS.md  MONITORING_GUIDE.md  UNIFIED_UI_GUIDE.md  setup-guide.md
k8s-manifests/base/: crd.yaml
k8s-manifests/local/: first-strategy.yaml  namespace.yaml  operator-deployment.yaml  second-strategy.yaml  third-strategy.yaml
k8s-operator/: Cargo.toml  Dockerfile
k8s-operator/src/: main.rs
scripts/: cleanup-local.sh  deploy-local.sh  start-port-forwarding.sh  stop-port-forwarding.sh
user_data/: freqUI_config.json
user_data/strategies/FirstStrategy/: FirstStrategy.py  config_backtest.json  config_dryrun.json
user_data/strategies/SecondStrategy/: SecondStrategy.py  config_backtest.json  config_dryrun.json
user_data/strategies/ThirdStrategy/: ThirdStrategy.py  config_backtest.json  config_dryrun.json
